--- a/product.html
+++ b/product.html
@@ -47,12 +47,12 @@
 				</div>
 
 				<span class="topbar-child1">
-					Free shipping for standard order over £20.00
+					Our website is currently in BETA trials.
 				</span>
 
 				<div class="topbar-child2">
 					<span class="topbar-email">
-						NAME@example.com
+						teamglobalm@gmail.com
 					</span>
 
 					<div class="topbar-language rs1-select2">
