--- a/template.html
+++ b/template.html
@@ -277,7 +277,7 @@
 			</a>
 
 			<div class="t-center s-text8 p-t-20">
-				Copyright © 2018-2019 All rights reserved. | Website Designed and Administrated by <a href='instagram.com/louisgrxxn'>Louis Green</a>
+				Copyright © 2018-2019 All rights reserved. | Website Designed and Administrated by <a href='instagram.com/louisgrxxn'>Global Media</a>
 			</div>
 		</div>
 	</footer>
@@ -516,7 +516,7 @@ NEW
 			</a>
 
 			<div class="t-center s-text8 p-t-20">
-				Copyright © 2018-2019 All rights reserved. | Website Designed and Administrated by <a href='instagram.com/louisgrxxn'>Louis Green</a>
+				Copyright © 2018-2019 All rights reserved. | Website Designed and Administrated by <a href='instagram.com/louisgrxxn'>Global Media</a>
 			</div>
 		</div>
 	</footer>
