--- a/product-detail.html
+++ b/product-detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>NAME - Watermellon + Stawberry Doughnut</title>
+	<title>Rainbow Luxe - Watermellon + Stawberry Doughnut</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -47,12 +47,12 @@
 				</div>
 
 				<span class="topbar-child1">
-					Free shipping for standard order over $20.00
+					Our website is currently in BETA trials.
 				</span>
 
 				<div class="topbar-child2">
 					<span class="topbar-email">
-						NAME@example.com
+						teamglobalm@gmail.com
 					</span>
 
 					<div class="topbar-language rs1-select2">
@@ -309,20 +309,19 @@
 				<ul class="main-menu">
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<span class="topbar-child1">
-							Free shipping for standard order over $100
+							Our website is currently in BETA trials.
 						</span>
 					</li>
 
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<div class="topbar-child2-mobile">
 							<span class="topbar-email">
-								fashe@example.com
+								teamglobalm@gmail.com
 							</span>
 
 							<div class="topbar-language rs1-select2">
 								<select class="selection-1" name="time">
-									<option>USD</option>
-									<option>EUR</option>
+									<option>GBP</option>
 								</select>
 							</div>
 						</div>
