--- a/refund.html
+++ b/refund.html
@@ -227,14 +227,14 @@
 				<ul class="main-menu">
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<span class="topbar-child1">
-							Free shipping for standard order over £20.00
+							Our website is currently in BETA trials.
 						</span>
 					</li>
 
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<div class="topbar-child2-mobile">
 							<span class="topbar-email">
-								NAME@example.com
+								teamglobalm@gmail.com
 							</span>
 
 							<div class="topbar-language rs1-select2">
