--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 				<div class="topbar-child2">
 					<span class="topbar-email">
-						LuxeAdministration@outlook.com
+						teamglobalm@gmail.com
 					</span>
 
 					<div class="topbar-language rs1-select2">
@@ -242,7 +242,7 @@
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<div class="topbar-child2-mobile">
 							<span class="topbar-email">
-								luxeadministration@outlook.com
+								teamglobalm@gmail.com
 							</span>
 
 							<div class="topbar-language rs1-select2">
